# Trading-Bot

./: .dockerignore  .env.example  .gitignore  OPTIMIZE-AUDIT.md  backfill_snapshots.py  backtest-config.json  capital_param_analysis.py  docker-compose.yml  download_parquet.py  migrate.sh  param_grid.py  s_gap15_p1k_deep.py  s_gap_buy_deep.py  validate_ec2.sh  volume_groups.json  walk_forward.py
analysis/: 01-pattern-analysis.md  02-strategy-recommendations.md  03-dynamic-quantity-analysis.md  04-confidence-score-dynamic-qty.md  05-per-stock-patterns.md  06-websocket-vs-polling.md  07-websocket-400-debug.md  08-pattern-discovery-report.md  09-brainstorm-ideas.md  10-position-sizing-discovery.md  b36_scorer_hunt.py  backtest_config_sweep.py  backtest_sim.py  backtest_sim_v2.py  buy_pattern_hunt.py  cherry_pick_deep.py  compare.js  confirm_on_s6.py  corrected_mega.py  deep_3green_exit.py  deep_6points.py  deep_b36_buy.py  deep_buy.py  deep_buy_sizing.py  deep_confirm_exit.py  deep_exit.py  deep_final_hunt.py  deep_invisible.py  deep_position_mgmt.py  deep_round2_explosion_guard.py  deep_second_leg.py  deep_sizing_candles.py  deep_v2_scorer.py  deep_winner_vs_loser.py  fib_gap_integration.py  hunt_wave2.py  margin_liquidity.py  mega_all_patterns.py  mega_deep.py  mega_fullday.py  (+33 more)
analysis_capital_params/: report.md
analysis_gap_buy_p1k/: daily_pnl_rs.npy  udates.npy
deploy/: analyze-afternoon-momentum.js  analyze-bucket-window.js  analyze-exact.js  analyze-gap-plus-day-pattern.js  analyze-hidden-patterns.js  analyze-honest.js  analyze-no-lookahead.js  analyze-observe-then-pick.js  analyze-scoring-deep.js  analyze-scoring-optimize.js  analyze.js  (+31 more)
engine/: Cargo.toml  Dockerfile
engine/src/: config.rs  derived.rs  exit_manager.rs  lib.rs  main.rs  order_executor.rs  poller.rs  tests.rs  types.rs  ws_feed.rs
engine/src/api/: accounts.rs  backtest.rs  ch_http.rs  close_all.rs  config.rs  daily_ref.rs  mod.rs  paper.rs  performance.rs  positions.rs  research.rs  settings.rs  signals.rs  snapshots.rs  status.rs  swing.rs  watchlist.rs  ws.rs  zerodha_auth.rs
engine/src/db/: clickhouse.rs  daily_ref.rs  mod.rs  signals.rs  snapshots.rs  watchlist.rs
engine/src/dhan/: client.rs  margin.rs  market_data.rs  mod.rs  orders.rs  scrip_master.rs
engine/src/zerodha/: client.rs  mod.rs  orders.rs
(+125 files in other folders)
