[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine"
path = "src/lib.rs"

[[bin]]
name = "engine"
path = "src/main.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"
profile = "release-bin"

[dependencies]
rayon       = "1.10"
clap        = { version = "4", features = ["derive"] }
tokio        = { version = "1",    features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
tokio-util   = { version = "0.7",  features = ["rt"] }
axum         = { version = "0.7", features = ["ws"] }
reqwest      = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
clickhouse   = { version = "0.12" }
chrono       = { version = "0.4",  features = ["serde"] }
chrono-tz    = "0.9"
uuid         = { version = "1",    features = ["v4", "serde"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow       = "1"
tower-http   = { version = "0.5",  features = ["cors"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
reqwest-websocket = "0.4"
csv          = "1.3"
futures      = "0.3"
sha2         = "0.10"

[dev-dependencies]
tokio-test   = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
incremental = true
