[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "engine"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1",    features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
axum               = { version = "0.7" }
reqwest            = { version = "0.12", features = ["json", "rustls-tls"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
clickhouse         = { version = "0.12" }
chrono             = { version = "0.4",  features = ["serde"] }
chrono-tz          = "0.9"
tracing            = "0.1"
tracing-subscriber = { version = "0.3",  features = ["env-filter"] }
anyhow             = "1"
tower-http         = { version = "0.5",  features = ["cors"] }
base64             = "0.22"

[profile.release]
lto = "thin"
codegen-units = 1
incremental = true
